; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/connection/extr_remote_commands.c_ExecuteCriticalRemoteCommand.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/connection/extr_remote_commands.c_ExecuteCriticalRemoteCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ExecuteCriticalRemoteCommand(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  store i32 0, i32* %5, align 4
  store i32* null, i32** %6, align 8
  store i32 1, i32* %7, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = call i32 @SendRemoteCommand(i32* %8, i8* %9)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = icmp eq i32 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %2
  %14 = load i32*, i32** %3, align 8
  %15 = load i32, i32* @ERROR, align 4
  %16 = call i32 @ReportConnectionError(i32* %14, i32 %15)
  br label %17

17:                                               ; preds = %13, %2
  %18 = load i32*, i32** %3, align 8
  %19 = load i32, i32* %7, align 4
  %20 = call i32* @GetRemoteCommandResult(i32* %18, i32 %19)
  store i32* %20, i32** %6, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = call i32 @IsResponseOK(i32* %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %29, label %24

24:                                               ; preds = %17
  %25 = load i32*, i32** %3, align 8
  %26 = load i32*, i32** %6, align 8
  %27 = load i32, i32* @ERROR, align 4
  %28 = call i32 @ReportResultError(i32* %25, i32* %26, i32 %27)
  br label %29

29:                                               ; preds = %24, %17
  %30 = load i32*, i32** %6, align 8
  %31 = call i32 @PQclear(i32* %30)
  %32 = load i32*, i32** %3, align 8
  %33 = call i32 @ForgetResults(i32* %32)
  ret void
}

declare dso_local i32 @SendRemoteCommand(i32*, i8*) #1

declare dso_local i32 @ReportConnectionError(i32*, i32) #1

declare dso_local i32* @GetRemoteCommandResult(i32*, i32) #1

declare dso_local i32 @IsResponseOK(i32*) #1

declare dso_local i32 @ReportResultError(i32*, i32*, i32) #1

declare dso_local i32 @PQclear(i32*) #1

declare dso_local i32 @ForgetResults(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
